[project]
name = "19hz-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "selectolax>=0.3.34",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
fastmcp = { git = "https://github.com/ibash/fastmcp.git" }
